<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".SetupActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/profile"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/setup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_profile"
        android:background="@drawable/inputs"
        android:padding="14dp"
        android:drawableLeft="@drawable/username"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/setup_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_username"
        android:background="@drawable/inputs"
        android:padding="14dp"
        android:drawableLeft="@drawable/name"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/full_name"/>
    <EditText
        android:id="@+id/setup_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_fullname"
        android:background="@drawable/inputs"
        android:padding="14dp"
        android:drawableLeft="@drawable/country"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/country"/>
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:padding="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/setup_country"
        android:layout_centerHorizontal="true"
        android:text="@string/save"/>

</RelativeLayout>