<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/login_icon"
        android:background="@drawable/inputs"
        android:padding="6dp"
        android:drawableStart="@drawable/email"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs"
        android:layout_below="@+id/login_email"
        android:padding="6dp"
        android:drawableStart="@drawable/password"
        android:layout_marginTop="5dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_below="@+id/login_password"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/register_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_marginTop="5dp"
        android:text="@string/don_t_have_anaccount_need_new_account"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_link"
        android:layout_marginTop="10dp"
        android:text="@string/or_login_with"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView">

        <ImageView
            android:id="@+id/facebook_btn"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:src="@drawable/facebook"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"/>
        <ImageView
            android:id="@+id/twitter_btn"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:src="@drawable/twitter"
            android:layout_marginLeft="5dp"/>
        <ImageView
            android:id="@+id/google_btn"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:src="@drawable/google"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>


</RelativeLayout>